# simple-to-do

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  demo-data.json  index.html  package-lock.json  package.json  plan.md  vite.config.js  widget.html
.github/workflows/: release.yml
docs/: Electron迁移Tauri方案.md  README.md  产品调研.md  产品需求文档.md  使用指南说明.md  功能路线图.md  安装与使用.md  技术架构.md  数据库设计.md  数据模型.md  时钟开发任务.md  界面设计规范.md
docs/icon-options/: index.html
electron/: main.js  preload.js
scripts/: build-windows.ps1  capture-manual-screenshots.mjs  gen-installer-images.mjs  install.bat  patch-nsis-lang.ps1  release-preflight.mjs  seed-demo-data.mjs  seed-test-data.mjs
src/: App.vue  env.d.ts  main.js  widget.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/nsis/: generate_assets.py  installer.nsi  override_strings.nsh
src-tauri/src/: main.rs
src/assets/: styles.scss
src/components/: AppRail.vue  CalendarView.vue  ClockSidebar.vue  ClockWorkspace.vue  ColorPicker.vue  ConfirmDialog.vue  DatePicker.vue  EmojiPicker.vue  FocusCelebration.vue  FocusHistoryWorkspace.vue  FocusReminderWindow.vue  FocusRewardBadge.vue  FormatMenu.vue  HelpCenter.vue  ImageLightbox.vue  InputDialog.vue  MoveToListModal.vue  ProfilePanel.vue  RhythmWorkspace.vue  RichTextEditor.vue  SettingsPanel.vue  Sidebar.vue  SpaceManagement.vue  StatsView.vue  TaskDetail.vue  TaskGroupHeader.vue  TaskItem.vue  TaskList.vue  TimePicker.vue  ViewModeToggle.vue  YearMonthPicker.vue
src/composables/: useDragSort.js  (+1 more)
(+10 files in other folders)
