[package]
name = "simple-to-do"
version = "1.0.0"
description = "滴答清单 MVP 复刻版"
authors = ["simple-to-do"]
edition = "2021"

[lib]
name = "simple_to_do_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
base64 = "0.22"
rfd = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
